--- a/mvc-java8/src/main/resources/templates/home/index.html
+++ b/mvc-java8/src/main/resources/templates/home/index.html
@@ -11,7 +11,7 @@
         <div th:replace="fragments/layout :: topMenu"></div>
         <main role="main" class="container">
             <div class="jumbotron">
-                <h1>Navbar example</h1>
+                <h1>Spring MVC</h1>
                 <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser's viewport.</p>
                 <a class="btn btn-lg btn-primary" href="../../components/navbar/" role="button">View navbar docs »</a>
             </div>
